tests/data-clumps/test-cases/field-field/simple/positive/java/source/Doctor.java
public class Doctor {
    public int recordId;
    public boolean isActive;
    public int visitCount;

    public Doctor(int recordId, boolean isActive, int visitCount) {
        this.recordId = recordId;
        this.isActive = isActive;
        this.visitCount = visitCount;
    }
}
