tests/data-clumps/test-cases/field-field/simple/negative/java/source/Patient.java
public class Patient {
    public String firstName;
    public String lastName;
    public int age;

    public Patient(String firstName, String lastName, int age) {
        this.firstName = firstName;
        this.lastName = lastName;
        this.age = age;
    }
}
